@@ -1,11 +1,0 @@
-## Script (Python) "add_submit_helper"
-##bind container=container
-##bind context=context
-##bind namespace=
-##bind script=script
-##bind subpath=traverse_subpath
-##parameters=model, id, title, result
-##title=
-##
-model.manage_addProduct['SilvaForum'].manage_addThread(id, title)
-return getattr(model, id)
